[gd_scene load_steps=8 format=3 uid="uid://bgjksx2dl5l4d"]

[ext_resource type="Script" path="res://scripts/puzzles/switch-puzzle/SwitchPuzzle.gd" id="1_x14el"]
[ext_resource type="Script" path="res://scripts/puzzles/switch-puzzle/Switch.gd" id="2_agbqi"]
[ext_resource type="Texture2D" uid="uid://cg44664s6ywtq" path="res://icon.svg" id="3_w5d41"]
[ext_resource type="Script" path="res://scripts/shared/PuzzeReward.gd" id="4_cbf8t"]
[ext_resource type="PackedScene" uid="uid://bqlw063hk567a" path="res://scenes/shared/Collectable.tscn" id="5_xetmb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sxvu4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dwdux"]
radius = 285.351

[node name="SwitchPuzzle" type="Node2D"]
script = ExtResource("1_x14el")

[node name="InteractiveNodes" type="Node2D" parent="."]

[node name="Switch1" type="Node2D" parent="InteractiveNodes"]
position = Vector2(-217, -1)
script = ExtResource("2_agbqi")

[node name="Area2D" type="Area2D" parent="InteractiveNodes/Switch1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveNodes/Switch1/Area2D"]
shape = SubResource("CircleShape2D_sxvu4")

[node name="SwitchSprite" type="Sprite2D" parent="InteractiveNodes/Switch1"]
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("3_w5d41")

[node name="Switch2" type="Node2D" parent="InteractiveNodes"]
position = Vector2(190, 0)
script = ExtResource("2_agbqi")

[node name="Area2D" type="Area2D" parent="InteractiveNodes/Switch2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveNodes/Switch2/Area2D"]
shape = SubResource("CircleShape2D_sxvu4")

[node name="SwitchSprite" type="Sprite2D" parent="InteractiveNodes/Switch2"]
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("3_w5d41")

[node name="Reward" type="Node2D" parent="."]
script = ExtResource("4_cbf8t")

[node name="Collectable" parent="Reward" instance=ExtResource("5_xetmb")]
position = Vector2(200, 97)
isPuzzle = true

[node name="ActiveCheck" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveCheck"]
shape = SubResource("CircleShape2D_dwdux")

[connection signal="body_entered" from="InteractiveNodes/Switch1/Area2D" to="InteractiveNodes/Switch1" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="InteractiveNodes/Switch1/Area2D" to="InteractiveNodes/Switch1" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="InteractiveNodes/Switch2/Area2D" to="InteractiveNodes/Switch2" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="InteractiveNodes/Switch2/Area2D" to="InteractiveNodes/Switch2" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="ActiveCheck" to="." method="_on_active_check_body_entered"]
[connection signal="body_exited" from="ActiveCheck" to="." method="_on_active_check_body_exited"]
